make sure that the jackpot line is align with others

--- a/styleF.css
+++ b/styleF.css
@@ -194,7 +194,7 @@ ul.draw-result li.extra {
         font-size: 19px;
         font-weight: 570;
         margin-top: 4%;
-        margin-left: 1%;
+        margin-left: 0%;
     }
     html.no-svg ul.draw-result li,
     ul.draw-result li {
@@ -223,7 +223,7 @@ ul.draw-result li.extra {
         font-size: 17px;
         font-weight: 550;
         margin-top: 4%;
-        margin-left: 1%;
+        margin-left: 0%;
     }
     html.no-svg ul.draw-result li,
     ul.draw-result li {
@@ -252,7 +252,7 @@ ul.draw-result li.extra {
         font-size: 17px;
         font-weight: 550;
         margin-top: 4%;
-        margin-left: 1%;
+        margin-left: 0%;
     }
     html.no-svg ul.draw-result li,
     ul.draw-result li {
